Removed part of category collapse transition to avoid cutting off items

--- a/hoot/static/food/css/location_detail.css
+++ b/hoot/static/food/css/location_detail.css
@@ -234,27 +234,12 @@ div.category.collapsed > h3
 
 div.category > div.items
 {
-    max-height: 30em;
-    opacity: 1;
     overflow: hidden;
-
-    -webkit-transition-property: max-height, opacity;
-    -moz-transition-property: max-height, opacity;
-    -ms-transition-property: max-height, opacity;
-    -o-transition-property: max-height, opacity;
-    transition-property: max-height, opacity;
-
-    -webkit-transition-duration: 0.35s;
-    -moz-transition-duration: 0.35s;
-    -ms-transition-duration: 0.35s;
-    -o-transition-duration: 0.35s;
-    transition-duration: 0.35s;
 }
 
 div.category.collapsed > div.items
 {
-    max-height: 0;
-    opacity: 0;
+    display: none;
 }
 
 ul.category-buttons
